# todolist_with_ai

./: .gitignore  README.md  com.obsidian-todo-ai.daily.plist  config.yaml  install.sh  pyproject.toml
scripts/: daily_run.sh  init_goals.py
src/: ai_advisor.py  cli.py  daily_review.py  goal_manager.py  todo_manager.py  vault.py
templates/: daily_todo.md  goal.md  weekly_review.md
